# metalinks

./: .gitignore  README.md  create_knowledge_graph.py  create_sqllite_db.py  cypher_query.txt  docker-compose.yml  env.yml  pyproject.toml  script.py
config/: biocypher_config.yaml  biocypher_config_sqlite.yaml  biocypher_docker_config.yaml  schema_config.yaml
data/: Cellphone_suptab4_curated.xlsx  TransportDB2.0_translated.tsv  targets_and_families.csv
data/Cellinker/: human-sMOL.txt
data/CellphoneDB/: Cellphone_suptab4_curated.xlsx
data/HMDB/: hmdb_reactions_full_status.csv
data/NeuronChat/: NeuronChatDB_human.csv
data/Recon3D/: recon_gene_symbols.csv
data/mapping_tables/: Neuronchat_table.csv  global_ID_mapping_curated.tsv  hmdb_protein_mapping.csv  missing_symbols.csv
data/scConnect/: interactions.csv
hmb/: adapter.py
hmdb/: adapter.py
initial_parser/: metabolites.py  proteins.py  reactions.py
metalinks/adapters/: cellinker_metabolites_adapter.py  cellphone_metabolites_adapter.py  hmdb_adapter.py  hmr_adapter.py  neuronchat_adapter.py  recon_adapter.py  rhea_adapter.py  scconnect_adapter.py  stitch_adapter.py  uniprot_metalinks.py
recon/: adapter.py
stitch/: adapter.py
