[tool.poetry]
name = "metalinks"
version = "0.1.0"
description = ""
authors = ["EliasFarr <49950471+EliasFarr@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.28.2"
pandas = "^1.5.3"
numpy = "^1.24.2"
scipy = "^1.9.3"
pypath-omnipath = "^0.14.33"
tqdm = "^4.65.0"
bs4 = "^0.0.1"
biocypher = "^0.5.6"
bioregistry = "^0.6.98"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
