[tool.poetry]
name = "metalinks"
version = "0.1.0"
description = ""
authors = ["EliasFarr <49950471+EliasFarr@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.28.2"
numpy = "^1.24.2"
scipy = "^1.9.3"
pypath-omnipath = "^0.16.10"
tqdm = "^4.65.0"
bs4 = "^0.0.1"
biocypher = "^0.5.40"
bioregistry = "^0.10.177"
polars = "^0.20.16"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
